bottom-bar on mobile layout overlapping message-box and shadows fixed

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 0 24px 0 22px;
     z-index: 5;
 }
@@ -78,10 +78,10 @@ body {
 }
 
 main {
-    margin-top: 106px;
+    margin: 105px 0px;
     background-color: #F3F3F3;
-    height: 500px;
-    overflow-y: scroll;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1), 0px -4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 5;
 }
 
 .side-bar {
@@ -166,7 +166,7 @@ main {
     position: fixed;
     bottom: 0;
     left: 0;
-    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
     padding: 18px 27px 14px 17px;
     z-index: 5;
     display: flex;
@@ -207,7 +207,7 @@ main {
 .message-box {
     display: flex;
     font-size: 14px;
-    padding: 10px 9px 8px 9px;
+    padding: 10px 9px 7px 9px;
     margin-top: 4px;
     flex-wrap: wrap;
 }
